Added benchmark task